# Geant_Inst

./: CMakeLists.txt  README.md  alisa.js  alisa5woct.js  alisa82.js  main.cpp  random_pxls.js  script_alisa.txt  sctipt_alisa_2ch - копия.txt
